--- a/style.css
+++ b/style.css
@@ -1079,7 +1079,7 @@ footer > p {
         
     }
 }
-@media (max-height: 1100px)
+@media (min-height: 1100px)
 {
     #sobrescratch{
         font-size: 30px;
