--- a/style.css
+++ b/style.css
@@ -692,6 +692,12 @@ footer > p {
      
         margin-top: 30px;
     }
+    #sobrescratch > a > img:hover{
+        width: 260px;
+        transition: all 400ms;
+        box-shadow: 0px 0px 10px 5px gray;
+    
+    }
     header{
         height: 20vh;
 
